# revoltts

./: .gitignore  FISH_SPEECH_PARAMETERS.md  MVP_PROJECT_PLAN.md  PROJECT_STRUCTURE_ANALYSIS.md  README.md  index.html  main.py  pyproject.toml
fish_speech/utils/: __init__.py
web/: index.html  package-lock.json  package.json  vite.config.ts
web/public/: _worker.js
web/src/: App.tsx  index.css
web/src/components/ui/: button.tsx
web/src/services/: tts.ts
