[project]
name = "revoltts"
version = "0.1.0"
description = "Minimal clone-voice TTS API powered by bundled Fish Speech"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy",
    "torch==2.8.0",
    "torchaudio==2.8.0",
    "transformers<=4.57.3",
    "hydra-core>=1.3.2",
    "omegaconf>=2.3.0",
    "natsort>=8.4.0",
    "einops>=0.7.0",
    "librosa>=0.10.1",
    "soundfile>=0.12.1",
    "fastapi>=0.115.0",
    "python-multipart",
    "uvicorn>=0.30.0",
    "loguru>=0.6.0",
    "loralib>=0.1.2",
    "pyrootutils>=1.0.4",
    "resampy>=0.4.3",
    "einx[torch]==0.2.2",
    "zstandard>=0.22.0",
    "opencc-python-reimplemented==0.1.7",
    "silero-vad",
    "tiktoken>=0.8.0",
    "pydantic==2.9.2",
    "cachetools",
    "descript-audio-codec",
    "safetensors",
    "click>=8.0.0",
    "tqdm>=4.66.0",
]

[project.optional-dependencies]
stable = [
    "torch==2.8.0",
    "torchaudio",
]
cpu = [
    "torch==2.8.0",
    "torchaudio",
]
cu126 = [
    "torch==2.8.0",
    "torchaudio",
]
cu128 = [
    "torch==2.8.0",
    "torchaudio",
]
cu129 = [
    "torch==2.8.0",
    "torchaudio",
]

[tool.uv]
override-dependencies = [
    "protobuf>=3.20.0,<6.0.0",
]
conflicts = [
    [
        { extra = "cpu" },
        { extra = "cu126" },
        { extra = "cu128" },
        { extra = "cu129" },
    ],
]

[tool.uv.sources]
torch = [
    { index = "pytorch-cpu", extra = "cpu" },
    { index = "pytorch-cu126", extra = "cu126" },
    { index = "pytorch-cu128", extra = "cu128" },
    { index = "pytorch-cu129", extra = "cu129" },
]
torchaudio = [
    { index = "pytorch-cpu", extra = "cpu" },
    { index = "pytorch-cu126", extra = "cu126" },
    { index = "pytorch-cu128", extra = "cu128" },
    { index = "pytorch-cu129", extra = "cu129" },
]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[[tool.uv.index]]
name = "pytorch-cu126"
url = "https://download.pytorch.org/whl/cu126"
explicit = true

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[[tool.uv.index]]
name = "pytorch-cu129"
url = "https://download.pytorch.org/whl/cu129"
explicit = true

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = ["main"]

[tool.setuptools.packages.find]
include = ["fish_speech*"]

[tool.setuptools.package-data]
fish_speech = ["configs/*.yaml", "configs/lora/*.yaml", "i18n/locale/*.json"]
